[package]
name = "bossphorus"
version = "0.0.1"
authors = ["Jordan Matelsky <j6k4m8@gmail.com>"]
edition = "2018"

[dependencies]
blosc = "0.1.2"
diesel = { version = "1.4.4", features = ["chrono", "sqlite"] }
diesel_migrations = "1.4.0"
chrono = "0.4.11"
image = "0.23.3"
ndarray = "0.13.0"
reqwest = { version = "0.10.4", features = ["blocking"] }
rocket = "0.4.4"
rocket_codegen = "0.4.4"
rust-s3 = {version = "0.22.12", features = ["no-verify-ssl"]}
serde = {version = "1.0.105", features=["derive"]}
serde_derive = "1.0.105"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
